syntax = "proto3";
option java_package = "orbit.shared.proto";
package orbit.shared;

import "orbit/shared/node.proto";

service NodeManagement {
    rpc JoinCluster (JoinClusterRequestProto) returns (NodeLeaseResponseProto);
    rpc RenewLease (RenewNodeLeaseRequestProto) returns (NodeLeaseResponseProto);
    rpc LeaveCluster (LeaveClusterRequestProto) returns (NodeLeaseResponseProto);
}

message JoinClusterRequestProto {
    CapabilitiesProto capabilities = 1;
}

message RenewNodeLeaseRequestProto {
    string challenge_token = 1;
    CapabilitiesProto capabilities = 2;
}

message LeaveClusterRequestProto {
}

message NodeLeaseResponseProto {
    Status status = 1;
    NodeInfoProto info = 2;
    string error_description = 3;

    enum Status {
        OK = 0;
        ERROR = 1;
    }
}
